record declaration